--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HO CA</title>
     <link rel = "icon" href ="images/308831.png">
-    <link rel ="stylesheet" href ="./baitap.css">
+    <link rel ="stylesheet" href ="baitap.css">
 </head>
 <body>
     <div class ="image">
