--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class ="image">
 
-       <img class ="image" id ="co" src = "./co.gif">
-       <img class ="image" id="cadong" src ="./cadong.gif">
+       <img class ="image" id ="co" src = "co.gif">
+       <img class ="image" id="cadong" src ="cadong.gif">
        <img class ="image" id="cavoi" src ="cavoi.gif">
        <img class ="image" id="casau" src ="casau.gif">
        <img class ="image" id="cabong" src ="cabong.gif">
        <img class ="image" id="calao" src ="calao.gif">
-       <img  class ="image" id ="anh1" src ="./Animation - 1721264596485.gif">
+       <img  class ="image" id ="anh1" src ="Animation - 1721264596485.gif">
        
     </div>
 
